# adb-util

./: .gitignore  .pre-commit-config.yaml  LICENSE  LOGCAT_IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  README.md  create_version_info.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_adb_operations.py  test_file_manager.py  test_logcat_comprehensive.py  test_logcat_integration.py
.github/workflows/: ci-cd.yml  main.yml  test.yml
config/: pytest.ini
deploy/: build_exe.bat  build_linux.sh  build_simple.bat  install_linux.sh  troubleshoot_build.bat
docs/: TESTING_SUMMARY.md  TODO.md  app_requirement.md  development_plan.md  device_discovery_implementation.md  logging_system.md  requirements.txt  script_manager.md  testing-strategy.md
requirements/: base.txt  dev.txt  prod.txt
sample_scripts/device/: device_info.sh  log_collection.sh  performance_monitor.sh
sample_scripts/host/: adb_check.bat  adb_check.sh  system_info.bat  system_info.sh
scripts/: run_tests.py
scripts/deploy/: README.md  SYSTEM_REQUIREMENTS.md  install_windows.bat
scripts/dev/: setup_dev.py
src/adb/: __init__.py  command_runner.py  device_manager.py  file_operations.py  logcat_handler.py
src/adb_util/: __init__.py  __main__.py
src/adb_util/core/: __init__.py
src/adb_util/core/commands/: __init__.py  executor.py  logcat_handler.py  runner.py  shell.py
src/adb_util/core/device/: __init__.py  discovery.py  file_operations.py  manager.py  monitoring.py
src/adb_util/models/: __init__.py  command.py  device.py  tab.py
src/adb_util/services/: __init__.py  live_editor.py  script_manager.py  tab_manager.py
src/adb_util/ui/: __init__.py  device_tab.py  file_manager.py  integrated_text_editor.py  logging.py  main_window.py  preferences.py  script_editor_dialog.py  script_manager_tab.py  terminal.py
src/adb_util/utils/: __init__.py  constants.py  device_utils.py  formatters.py  logger.py  theme_manager.py
src/gui/: __init__.py  file_manager.py  integrated_text_editor.py  logging.py  main_window.py  preferences.py  script_editor_dialog.py  script_manager_tab.py  terminal.py  utils.py
src/models/: __init__.py  device.py
src/services/: __init__.py  command_storage.py  config_manager.py  script_manager.py
src/utils/: __init__.py  constants.py  device_utils.py  theme_manager.py  validators.py
tests/: __init__.py  conftest.py  sample_scripts_export.json  test_command_storage.py  test_comprehensive_device_discovery.py  test_comprehensive_theme.py  test_config_manager.py  test_dark_mode_components.py  test_device_discovery.py  test_device_manager.py  test_editor_detection.py  test_file_operations.py  test_immediate_response.py  test_import_default_content.py  test_integrated_editor.py  test_integrated_text_editor.py  test_json_export_import.py  test_json_formatting.py  test_json_functionality.py  test_json_logic.py  test_json_no_content.py  test_keyword_search_delay.py  test_live_editor.py  test_live_editor_integration.py  test_live_editor_service.py  test_logging.py  test_logging_dark_mode.py  test_logging_dark_mode_unit.py  test_logging_debug.py  test_logging_main_context.py  test_logging_main_window.py  test_logging_streaming.py  test_popup_styling.py  test_raw_logging.py  test_script_manager.py  test_script_manager_service.py  test_simple_theme_verification.py  test_tab_manager.py  test_theme.py  test_theme_demo.py  (+1 more)
tests/adb/: test_device_manager.py
tests/gui/: test_main_window.py
tests/integration/: test_device_workflows.py
tests/models/: test_command.py  test_device.py
tests/services/: test_config_manager.py  test_script_manager.py
tests/utils/: test_validators.py
